--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,22 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
-  
-  <nav class="top-bar">
-    <h1><a href="/">RouteRunner</a></h1>
+    <nav class="top-bar">
+    <div class="left">
+      <h1><a href="/">Route Runners</a></h1>
+      <p class="slogan">Define your limits.</p>
+    </div>
 
     <section class="top-bar-section">
       <ul class="right">
         <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
         <%- else -%>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <li><%= link_to 'Sign In', new_user_session_path %></li>
+          <li class = "button"><%= link_to 'Sign Up', new_user_registration_path %></li>
+          <br/>
+          <li class = "button"><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
       </ul>
     </section>
@@ -42,4 +46,7 @@
   
   <%= yield :extra_footer %>
 </body>
+<footer>
+  <p> need to add links to Footer.</p>
+</footer> 
 </html>
