--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,10 +2,9 @@ head {
     background: gradient(to right red, yellow);
   }
 body {
-    background-image: linear-gradient(to right, #e43768, #56fbeb);
-    background-repeat: initial;
-    background-color: #0ee9d0;
-    color: #e7f1f1 !important;
+    background-image: url("https://attsports.com/wp-content/uploads/2019/11/eDJI_0178-1024x768.jpg");
+    background-size: cover;
+    background-color: #191d1c;
     font-family: sans-serif;
     margin-bottom: 3rem;
   }
@@ -23,24 +22,23 @@ footer {
     font-size: 100%;
     text-shadow: -1px 1px 0 #000,
   }
-  .card {
-    background-color: #b3e5e5;
-    border-radius: 15px;
-    border: 1px solid black;
-    border-color: white;
-  }
   .top-bar {
-    color: #010303;
+    color: #f8f7f6;
     padding: 20px;
     font-size: 150%;
     font-family: sans-serif;
-    background-color: #c1f1f1;  
+    height: 10%;
+    background-image: url("https://www.pennington.com/-/media/Project/OneWeb/Pennington/Images/blog/seed/10-Surprising-Facts-About-Grass/grass_10surprising_opengraph.jpg");
+    background-repeat: no-repeat;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row; 
   }
   .button {
     font-family: 'Shadows Into Light', sans-serif;
     font-weight: bolder;
     font-size: 17px;
-    background: #4be437;
+    background: #8ac7ea;
     padding: 15px;
     border-radius: 50px;
     transition: 0.4s ease 0s;
@@ -58,4 +56,42 @@ footer {
   .resize {
     width: 400px;
     height: auto;
+}
+.card {
+  background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
+  border-radius: 10px;
+  border: 1px solid #EFFAFD;
+  width: 70%;
+  align-items: center;
+  margin:auto
+}
+
+.card2{
+  background-color: #c9ed7f;
+  border-radius: 1px;
+  border: 4px solid #020100;
+  width: 70%;
+  text-align: center;
+  align-items: center;
+  margin:auto
+}
+
+.card3{
+  background-color: #c9ed7f;
+  border-radius: 13px;
+  border: 4px solid #060504;
+  width: 100%;
+}
+
+.card4 {
+  background-image: url("https://cdn.statically.io/img/i.pinimg.com/originals/85/6f/31/856f31d9f475501c7552c97dbe727319.jpg");
+  border-radius: 10px;
+  border: 1px solid #060707;
+  width: 50%;
+  text-align: center;
+  align-items: center;
+  margin:auto
+}
+.trackIndex{
+  background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
 }
