--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,7 +4,6 @@ head {
   }
 body {
     background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
-    
     background-size: cover;
     background-color: #f6faf9;
     font-family: sans-serif;
@@ -113,7 +112,7 @@ footer {
   width: 400px;
   height: auto;
   border-radius: 10px;
-  margin-left: 300px;
+  margin-left: 30%;
 }
 .card {
   background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
@@ -123,7 +122,16 @@ footer {
   align-items: center;
   margin:auto
 }
-
+.card1{
+  background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
+  border: 1px solid #f5f6f8;
+  border-radius: 10px;
+  width: 35%;
+  margin: auto;
+  font-size: 17px;
+  font-weight: 600;
+  text-indent: 20%;
+}
 .card2{
   background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
   border-radius: 1px;
@@ -133,7 +141,6 @@ footer {
   align-items: center;
   margin:auto
 }
-
 .card3{
   background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
   border: 4px solid #064cf0;
@@ -143,9 +150,7 @@ footer {
   font-size: xx-large;
   font-weight: 600;
   text-indent: 30px;
-
 }
-
 .card4 {
   font-size: 15px;
   background-image: url("https://cdn.statically.io/img/i.pinimg.com/originals/85/6f/31/856f31d9f475501c7552c97dbe727319.jpg");
@@ -176,8 +181,6 @@ footer {
   align-items: center;
   margin:auto 
 }
-
-
 .indexCard {
   font-size: 20px;
   background-image: url("https://wallpaper.dog/large/963609.jpg");
@@ -207,8 +210,7 @@ footer {
   width: 55%;
   text-indent: 3%;
   // align-items: center;
-  margin:auto 
-  
+  margin:auto  
 }
 .review-card{
   color:black;
@@ -221,7 +223,6 @@ footer {
   align-items: center;
   margin:auto
 }
-
 .trackIndex{
   background-image: url("https://img.freepik.com/free-vector/smooth-white-wave-background_52683-55288.jpg?w=2000");
 }
@@ -238,13 +239,23 @@ footer {
   }
   border-radius: 5px;
 }
+.search-form{
+  color:black;
+  background-color: #000f6e;
+  border-radius: 10px;
+  border: 4px solid #020202;
+  width: 70%;
+  text-align: left;
+  text-indent: 10px;
+  align-items: center;
+  margin:auto
+}
 
 .review-index {
   margin: 1rem;
   border-radius: 5px;
   width: 70%;
 }
-
 .review-tile {
   margin: 2rem;
   width: 80%;
@@ -265,15 +276,12 @@ footer {
 .register-title {
   font-family: 'Stick No Bills', sans-serif;
   width: 270px;
-  line-height: 43px;
-  margin: 50px auto 20px;
+  margin: 10px auto 10px;
   font-size: 30px;
-  color: white;
-  color: #fffffff2;
+  color: #000000;
   text-align: center;
   text-shadow: 3px 3px 6px black;
 }
-
 .register-title1 {
   font-family: 'Stick No Bills', sans-serif;
   width: 270px;
@@ -291,7 +299,13 @@ footer {
   margin-left: 15px;
   border-radius: 15px;
 }
-
+.textBox1{
+  font-size: 14px;
+  width: 450px;
+  margin-left: 19%;
+  border-radius: 15px;
+  border: 2px solid #060707;
+}
 .sign-in-and-up {
   background-color: #fafafc;
   border: 3px solid #060707;
@@ -301,4 +315,11 @@ footer {
   box-shadow: 4px 4px #000000;
   width: 60%;
   margin-left: 20%;
+}
+.search-bar {
+  width: 70%;
+  margin: auto;
+}
+.search {
+  color: #067ef6;
 }
