--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -12,7 +12,7 @@ body {
 footer {
     text-align: center;
     background-color: #f5f7f8;
-    position: fixed;
+    // position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
@@ -164,7 +164,7 @@ footer {
 }
 .card5 {
   background-image: url("https://cdn.statically.io/img/i.pinimg.com/originals/85/6f/31/856f31d9f475501c7552c97dbe727319.jpg");
-  border-radius: 10px;
+  border-radius: 5px;
   border: 1px solid #060707;
   width: 50%;
   text-align: center;
