--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,17 @@
   <%= yield :extra_footer %>
 </body>
 <footer>
-  <p> need to add links to Footer.</p>
-</footer> 
+    <div class="footer">
+      <div class="footer-info">
+        <p>
+          <a class="about-us" href="/aboutme">About</a> 
+          -
+          <a href=https://www.linkedin.com/in/matthew-perry-k>Linkedin</a>
+          -
+          <a href=https://github.com/mkperry315>Github</a>
+      </div>
+        <p> 
+    </div>
+  </footer>
+</body>
 </html>
