--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
       <ul class="right">
         <%- if current_user -%>
           <li class = "button"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+          <li class = "button"><a href="/users/<%= current_user.id %>">My Profile</a></li>
         <%- else -%>
           <li class = "button"><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <br/>
           <li class = "button"><%= link_to 'Sign In', new_user_session_path %></li>
         <%- end -%>
       </ul>
-        <a href= '/users/:id'> <li class = "button" <%= link_to 'User Profile'%></li></a>
+        
     </section>
   </nav>
 
