--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
     <div class="footer">
       <div class="footer-info">
         <p>
-          <a class="about-us" href="/aboutme">About</a> 
+          <a class="about-us" href=https://launchpass.launchacademy.com/users/MatthewPerry3092/launcher_profile>About</a> 
           -
           <a href=https://www.linkedin.com/in/matthew-perry-k>Linkedin</a>
           -
